<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <ZoomButton
            android:id="@+id/merchantAppSubmitButton"
            android:layout_width="271dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="111dp"
            android:layout_weight="0.11"
            android:adjustViewBounds="true"
            android:baselineAlignBottom="false"
            android:onClick="onPaySubmit"
            android:src="@drawable/chekout_btn"
            android:text="Pay Now with BlueSnap" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:clickable="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.86dp"
                    android:layout_weight="1"
                    android:background="@drawable/line"></LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/currencySym"
                    android:layout_width="30dp"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical|end"
                    android:hint="$"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/productPriceEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/transparent"
                    android:hint="0"
                    android:inputType="numberDecimal"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/border">

                </LinearLayout>

                <Spinner
                    android:id="@+id/rateSpinner"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:clickable="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.86dp"
                    android:layout_weight="1"
                    android:background="@drawable/line"></LinearLayout>
            </TableRow>

            <TableRow>


                <TextView
                    android:id="@+id/taxSym1"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_vertical|right"
                    android:hint="Tax%"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/demoTaxEditText"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/transparent"
                    android:hint="0"
                    android:inputType="numberDecimal"
                    android:textAppearance="?android:attr/textAppearanceLarge" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:clickable="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.86dp"
                    android:layout_weight="1"
                    android:background="@drawable/line"></LinearLayout>
            </TableRow>
        </TableLayout>

        <Switch
            android:id="@+id/shippingSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:allowUndo="true"
            android:checked="false"
            android:clickable="true"
            android:enabled="true"
            android:text="@string/shipping"
            android:textSize="14sp" />
    </LinearLayout>


    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|center_vertical"
        android:background="@drawable/logo_poweredby_bluesnap" />

    <TextView
        android:id="@+id/demoVersionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_gravity="bottom|left"
        android:text="version" />

    <TextView
        android:id="@+id/paymentResultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rememberMeSwitch"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ProgressBar
        android:id="@+id/progressBarMerchant"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_centerInParent="true"
        android:layout_gravity="center" />
</RelativeLayout>

