...
                    android:text="0" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buyNowButton"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/btn_pay"
...
